deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dummy-ns
  labels:
    name: dummy-ns
